fix collection card not showing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,8 +154,11 @@ select {
 }
 
 .collections li {
-    border-left: 4px solid rgba(128, 128, 128, 0.489);
-    border-radius: 3px;
+    min-height: 150px;
+    padding: 3px;
+    border: 2px solid rgba(128, 128, 128, 0.489);
+    background: rgba(128, 128, 128, 0.237);
+    border-radius: 16px;
 }
 
 .collections {
